# dev

./: .envrc  .gitignore  .markdownlint.yaml  .markdownlint.yml  .mdlrc  .pre-commit-config.yaml  README.md  flake.nix  format.py  markdownlint.rb  mkdocs.yml  netlify.toml  package-lock.json  pyproject.toml  requirements.txt  setup.sh  tasks.py
.github/workflows/: ci.yml
docs/: index.md  philosophy.md
docs/bash/: index.md  scripting.md
docs/environment/: architecture.md  bootstrap.md  guide.md  homebrew.md  index.md
docs/environment/nix/: index.md  nix-darwin.md
docs/environment/tools/: chezmoi.md  direnv.md  homebrew.md
docs/environment/tools/nix/: home-manager.md  index.md  nix-darwin.md
docs/linux/: common_commands.md
docs/linux/concepts/filesystem/: layout.md
docs/networking/cisco/: cli.md  configuration.md  index.md
docs/networking/cisco/hardware/: switches.md
docs/networking/concepts/ip/: addressing.md
docs/networking/concepts/switching/: lan.md  spanning_tree.md  vlan.md
docs/performance/: analysis.md  linux.md  methodologies.md  terminology.md  tuning.md
docs/reference/gpg/: environment.md  generation.md  index.md  yubikey.md
docs/reference/yubikey/: index.md
