[tool.poetry]
name = "dev"
version = "0.1.0"
description = "Personal development handbook for @jmgilman"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.2.1"

[tool.poetry.dev-dependencies]
mdformat = "^0.7.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
