[tool.poetry]
name = "dev"
version = "0.1.0"
description = "Personal development handbook for @jmgilman"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.2.1"

[tool.poetry.dev-dependencies]
mdformat = "^0.7.13"
mdformat_tables = "^0.4.1"
black = "^22.1.0"
flake8 = "^4.0.1"
invoke = "^1.6.0"
makefun = "^1.13.1"

[tool.black]
line-length = 79


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
